# dspng

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  cliff.toml  pyproject.toml
.agents/skills/pyside6-m3-ui-system/: SKILL.md
.agents/skills/ui-design/: SKILL.md
.github/workflows/: ci.yml  cleanup.yml  release.yml  tag.yml  watch.yml
docs/: architecture.md  development.md  icon-design.md
issues/: 01-layer-visibility-toggle.md  02-layer-row-height.md  03-layer-order-reversed.md  04-thumbnail-scaling.md  05-group-thumbnail-stale.md  06-file-list-thumbnail-stale.md  07-drag-drop-reorder.md  08-layer-list-display-order.md  09-thumbnail-checkerboard.md  10-thumbnail-row-height-mismatch.md  11-thumbnail-uniform-square.md  12-drag-drop-targeting.md  13-file-list-size-presets.md  14-double-click-fit-to-view.md  15-layer-up-down-buttons.md  16-render-canvas-too-small.md  17-move-layer-segfault.md  18-layer-panel-size-presets.md  19-keep-selection-after-move.md  20-panel-titles-borders.md  21-layer-sml-not-working.md  22-reload-button.md  23-panel-buttons-above-content.md  24-m3-theme-system-migration.md  25-i18n-support.md  26-settings-dialog-theme-customization.md  27-font-customization.md  28-full-ui-redesign.md  29-keymaps-tab.md  30-configure-temp-dir.md  31-drag-export-naming.md
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
scripts/: build.py  compile_locales.py  make_icon.py
src/dspng/: __init__.py  __main__.py  main.py  models.py  psd_manager.py  renderer.py
src/dspng/ui/: __init__.py  settings.py  (+8 more)
(+12 files in other folders)
