[project]
name = "dspng"
version = "0.1.0"
description = "A standalone tool for rendering PSD files to PNG without Photoshop."
requires-python = ">=3.14"
dependencies = [
    "psd-tools>=1.17.2",
    "pyside6>=6.11.1",
]

[project.scripts]
dspng = "dspng.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dspng"]

[tool.hatch.metadata]
allow-direct-references = true
